--- a/css/layout-sm.css
+++ b/css/layout-sm.css
@@ -6,6 +6,7 @@ clear: both;
 /* header */
 .header{
     width: 100%;
+    padding-bottom:10%;
 }
 .nav-bar-brand{
     margin-left: 5%;
@@ -48,8 +49,32 @@ clear: both;
     margin-right: auto;
 }
 .header-center-button-left, .header-center-button-right{
-    display:block;
-    margin: 0 auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    padding: 2% 10% 2% 10%;
+    border-radius: 25% 25% 25% 25% / 100% 100% 100% 100%;
 }
+.lower-header-container{
+    padding-top:5%;
+    padding-bottom:5%;
 }
+.header-lower-item{
+    display: block;
+    width: 60%;
+    margin:auto;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    padding:10%;
+}
+.header-lower-h3{
+    margin-top:5%;
+    margin-bottom:5%;
+}
+
 /* header */
+/*features*/
+
+/*features*/
