--- a/css/layout-sm.css
+++ b/css/layout-sm.css
@@ -76,5 +76,59 @@ clear: both;
 
 /* header */
 /*features*/
-
+.features-item{
+    display: block;
+    margin:0 auto;
+    
+}
+.features-container{
+    padding-top: 15%;
+    padding-bottom: 15%;
+}
+.feature-item-image{
+    display: block;
+    margin:10% auto 10% auto;
+}
 /*features*/
+/*testimonial*/
+.testimonials-container{
+    width:70%;
+    margin:10% auto 0% auto;
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+.testimonial-body{
+    margin: 15% auto 15% auto;
+}
+.testimonial-body-item{
+    border-radius: 2%;
+    border:1px solid rgb(192, 192, 192);
+    padding: 10%;
+    margin:10% auto;
+    background-color: white;
+}
+.testimonial-image{
+    display:block;
+    margin:0 auto 10% auto;
+}
+.testimonial-body-text{
+    margin: 10% auto;
+}
+.testimonial-stars img{
+    display: inline-block;
+    margin: auto;
+}
+
+.testimonial-stars{
+    margin: 10% auto;
+}
+/*testimonial*/
+/*links*/
+.links{
+    padding: 10% 0;
+}
+.links-image{
+display: block;
+margin:10% auto;
+}
+/*links*/
