--- a/css/style-sm.css
+++ b/css/style-sm.css
@@ -72,3 +72,38 @@
 
 
 /*header*/
+/*features*/
+.features-item-h5{
+    text-align: center;
+    font-size: 1rem;
+    font-weight: bold;
+}
+.feature-item-p{
+    text-align: center;
+    font-size: 0.9rem;
+}
+/*features*/
+/*testimonials*/
+.testimonials{
+    background-color:  #FAFAFA;
+    ;
+}
+.testimonial-header-h2{
+font-size: 2.5rem;
+text-align: center;
+margin: 5% auto 5% auto;
+}
+.testimonial-header-p{
+    font-size: 0.9rem;
+    text-align: center;
+    margin: 5% auto 5% auto;
+    }
+    .testimonial-body-p{
+text-align: center;
+    }
+/*testimonials*/
+/*links*/
+.links{
+    background-color:  #FAFAFA;
+}
+/*links*/
