--- a/css/reset.css
+++ b/css/reset.css
@@ -144,11 +144,17 @@ h3 {
   font-family: "Montserrat", sans-serif;
   font-family: "Mulish", sans-serif;
   font-family: "Source Sans 3", sans-serif;
+  font-size: 1.5rem;
 }
 h5 {
     font-family: "Montserrat", sans-serif;
     font-family: "Mulish", sans-serif;
     font-family: "Source Sans 3", sans-serif;
+  }
+  h6{
+    font-family: "Montserrat", sans-serif;
+  font-family: "Mulish", sans-serif;
+  font-family: "Source Sans 3", sans-serif;
   }
 li {
   font-family: "Montserrat", sans-serif;
@@ -161,4 +167,9 @@ button{
     font-family: 'Mulish', sans-serif;
     font-family: 'Source Sans 3', sans-serif;
     
+}
+input{
+  font-family: 'Montserrat', sans-serif;
+    font-family: 'Mulish', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
 }
