--- a/css/reset.css
+++ b/css/reset.css
@@ -173,3 +173,8 @@ input{
     font-family: 'Mulish', sans-serif;
     font-family: 'Source Sans 3', sans-serif;
 }
+select{
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Mulish', sans-serif;
+  font-family: 'Source Sans 3', sans-serif;
+}
