--- a/css/reset.css
+++ b/css/reset.css
@@ -178,3 +178,8 @@ select{
   font-family: 'Mulish', sans-serif;
   font-family: 'Source Sans 3', sans-serif;
 }
+li{
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Mulish', sans-serif;
+  font-family: 'Source Sans 3', sans-serif;
+}
