--- a/css/style-xl.css
+++ b/css/style-xl.css
@@ -1,28 +1,34 @@
 /*header*/
 .header {
   background-image: url("../images/header-cover.jpg");
-  background-size: cover;
+  background-size:cover;
+
   /* background-position: 45% -48%; */
   background-blend-mode: color-burn;
   background-repeat: no-repeat;
 }
-.header-nav-bar {
-  background-color: white;
-}
 .nav-bar-brand {
   font-size: 1.5rem;
   font-weight: bolder;
+  color: white;
 }
 .nav-bar-items {
   list-style: none;
-  font-size: 1.8rem;
+  font-size: 0.9rem;
   color: #737373;
 }
 .nav-bar-link {
   text-decoration: none;
 }
+.member{
+  background-color: #23a6f0;
+  color:white;
+  border:none;
+  border-radius: 2%;
+}
 .header-center {
   color: white;
+  font-weight: bolder;
 }
 .center-headline {
   font-size: 2.5rem;
