--- a/css/layout-xl.css
+++ b/css/layout-xl.css
@@ -7,6 +7,7 @@
         min-width: 300px;
         width: 80%;
         margin:auto;
+        outline: 1px solid gray;
     }
 /*header*/
 .header-nav-bar{
@@ -231,5 +232,151 @@ float:left;
 .pricing-body-item-middle{
     padding-top:7%;
 }
+.pricing-button{
+    width:100%;
+    padding-top:5%;
+    padding-bottom:5%;
+    margin-top:25%;
+}
+.offers{
+    margin:auto;
+}
 
 /*pricing*/
+/*contact*/
+.contact-lower{
+    position: relative;
+}
+.contact-upper-container{
+    width: 75%;
+    margin: auto;
+    padding-bottom: 25%;
+    padding-top: 5%;
+}
+.contact-upper-container::after{
+    content: '';
+    display: block;
+    clear: both;
+}
+.contact-upper-left{
+    width: 45%;
+    float: left;
+}
+.contact-upper-right{
+    width: 40%;
+    float: right;
+}
+.contact-upper-left-p{
+    margin-top:5%;
+}
+
+.contact-form-h3{
+    width: 60%;
+  }
+  .contact-form-header{
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+  .contact-button{
+      display: block;
+  }
+  
+  .contact-form{
+      width:100%
+  }
+  .contact-text{
+    width: 100%;
+    margin: 2% auto;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
+    border: 1px solid #BDBDBD;
+    border-radius: 2%;
+  }
+  .contact-button{
+      width:100%;
+      padding-top:2.5%;
+      padding-bottom:2.5%;
+      border:none;
+      border-radius: 2%;
+
+  }
+/*contact*/
+/*footer*/
+.footer-upper-container{
+    width: 75%;
+    margin:auto;
+}
+.footer-upper-container::after{
+    content: '';
+    display:block;
+    clear: both;
+}
+.footer-upper-left{
+    float:left;
+    padding-top:5%;
+}
+.footer-upper-right{
+    float:right;
+    padding-top:5%;
+    padding-bottom:5%;
+}
+.footer-middle-container{
+    margin-left: 5%;
+    padding-bottom: 5%;
+}
+/* .footer-col-header{
+margin-top:10%;
+margin-bottom:10%;
+} */
+.footer-col-li{
+    margin-top:5%;
+}
+.footer-col-li img{
+    display: inline-block;
+    padding-top:5%;
+}
+.footer-col-li div{
+    display: inline-block;
+    margin-left:5%;
+
+}
+.footer-middle-col{
+float:left;
+}
+.footer-middle-col:not(:last-child){
+    margin-left:0;
+    width: 15%;
+}
+.footer-middle-col:not(:last-child) li{
+    margin-top:25%;
+
+}
+
+.footer-middle-col:last-child{
+    margin-left:0;
+    width: 30%;
+    padding: 0%;
+}
+.footer-lower-container{
+    width:75%;
+    margin-left:auto;
+    margin-right:auto;
+    /* margin-top:5%;
+    margin-bottom:5%; */
+    padding-top:5%;
+    padding-bottom:5%;
+}
+.footer-lower-left{
+    float:left;
+    width: 50%;
+}
+.reference img{
+display: inline-block;
+}
+.reference{
+    float:right;
+}
+.footer-lower-icons{
+   
+}
+/*footer*/
