--- a/css/style-xl.css
+++ b/css/style-xl.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Mulish:wght@200&family=Source+Sans+3:wght@300&display=swap');
-
+.main{
+  
+}
 /*header*/
 .header {
   background-image: url("../images/header-cover.jpg");
