--- a/css/layout-l.css
+++ b/css/layout-l.css
@@ -26,24 +26,50 @@
     display:none;
 }
 .nav-bar-brand{
-    float:left;
+    display: block;
 }
-.nav-bar-left{
-    float:left;
-    margin-left:10%;
-    width: 35%;
-}
+
 .nav-bar-right{
-    float:right;
-}
+    display:inline-block;
+    }
+    .nav-bar-left{
+        display: block;
+        margin-left:0%;
+        margin-top:5%;
+    }
+    .nav-bar-right{
+        display:block;
+        margin-right:0;
+        margin-left: auto;
+        margin-left: 0%;
+        margin-top:5%;
+    }
+    .nav-bar-items{
+    display: inline-block;
+    margin: 1%;
+    }
+    .login-div{
+        display: inline-block;
+    }
+    .member{
+        display: inline-block;
+        padding-top:2.5%;
+        padding-bottom:2.5%;
+        padding-right: 10%;
+        padding-left: 10%;
+        margin-left: 5%;
+        border-radius: 2%;
+    };
+   
+
 .nav-bar-items{
 display: inline-block;
 margin: 1%;
 }
-.member{
-    padding-top:5%;
-    padding-bottom:5%;
+.login-div{
+    display: inline-block;
 }
+
 .header-center{
     width: 40%;
     margin-left: auto;
@@ -62,11 +88,15 @@ margin: 1%;
     margin: 0 auto;
     margin-bottom: 20%;
 }
-.header-center-button-left,.header-center-button-right{
-    width: 10vw;
-    padding-top:5%;
-    padding-bottom:5%;
-    border-radius: 25% 25% 25% 25% / 100% 100% 100% 100% 
+.header-center-button-left, .header-center-button-right{
+    width: 20vw;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    padding: 5% 10% 5% 10%;
+    border-radius: 25% 25% 25% 25% / 100% 100% 100% 100%;
 }
 
 .header-lower::after{
