--- a/css/layout-xl.css
+++ b/css/layout-xl.css
@@ -26,23 +26,35 @@
     display:none;
 }
 .nav-bar-brand{
-    float:left;
+    display: inline-block;
 }
 .nav-bar-left{
-    float:left;
+    display: inline-block;
     margin-left:10%;
-    width: 35%;
+    width: 25%;
 }
 .nav-bar-right{
-    float:right;
+    display:inline-block;
+    margin-right:0;
+    margin-left: auto;
+    width: 25%;
+    margin-left: 25%;
 }
 .nav-bar-items{
 display: inline-block;
 margin: 1%;
 }
+.login-div{
+    display: inline-block;
+}
 .member{
+    display: inline-block;
     padding-top:5%;
     padding-bottom:5%;
+    padding-right: 10%;
+    padding-left: 10%;
+    margin-left: 5%;
+    bor
 }
 .header-center{
     width: 40%;
