--- a/css/style-sm.css
+++ b/css/style-sm.css
@@ -13,6 +13,9 @@
   font-size: 1.5rem;
   font-weight: bolder;
 }
+.nav-bar-brand:hover{
+  cursor: pointer;
+}
 .nav-bar-items {
   list-style: none;
   font-size: 1.8rem;
@@ -131,7 +134,7 @@
 }
 
 .links-lower-right {
-  border: 1px solid white;
+  
   border-radius: 2%;
 }
 
